--- a/memoria/tex/capitulos/capitulo-8.tex
+++ b/memoria/tex/capitulos/capitulo-8.tex
@@ -439,7 +439,7 @@ Sabemos hasta ahora que iterando el punto inicial y aplicando la transformación
 \subsection{Aproximando la normal}
 \label{subsection:normal-sdf}
 
-Teniendo esta estimación de la distancia podemos calcular el posible punto de intersección de un rayo con $\mathcal{J}_c$, pero si queremos evaluar el modelo de iluminación en dicho punto, antes necesitamos conocer la normal a la superficie en dicho punto. Y aquí es donde tenemos que afrontar la dificultad que supone la propia belleza de los fractales, que es su irregularidad y que su superficie en general no es diferenciable. No existen formas de calcular de forma exacta esta normal, pero en realidad nosotros estamos fijando una resolución que limita el nivel de detalle de la figura, por lo que podemos utilizar ciertos métodos para aproximar esta normal.
+Teniendo esta estimación de la distancia podemos calcular el posible punto de intersección de un rayo con $\mathcal{J}_c$, pero si queremos evaluar el modelo de iluminación en dicho punto, antes necesitamos conocer la normal a la superficie en dicho punto. Y aquí es donde tenemos que afrontar la dificultad que supone la propia belleza de los fractales, que es su irregularidad y que su superficie en general no es diferenciable. Por ello, no existe un plano tangente a la superficie ni un vector normal a la misma en ninguno de sus puntos. Sin embargo, nosotros estamos aproximando esa superficie ideal con otra distinta, muy similar, pero no igual, y esa otra superficie aproximada sí es diferenciable, por lo que podemos utilizar ciertos métodos para aproximar esta normal.
 
 \subsubsection{Método 1: Gradiente de la SDF}
 
@@ -448,18 +448,20 @@ La manera más sencilla de obtener un vector normal a la superficie es tomando e
 \begin{algorithm}[H]
     \caption{Cálculo de la normal mediante el gradiente de la SDF} \label{alg:normal-gradiente-sdf}
     \begin{algorithmic}
-    \State $h\gets\varepsilon$
-    \State $g_{x+}\gets p + (h,0,0)$
-    \State $g_{x-}\gets p - (h,0,0)$
-    \State $g_{y+}\gets p + (0,h,0)$
-    \State $g_{y-}\gets p - (0,h,0)$
-    \State $g_{z+}\gets p + (0,0,h)$
-    \State $g_{z-}\gets p - (0,0,h)$
+    \Procedure{CalcularNormalGradiente}{$p$: punto de $\R^3$, $d_c$: SDF del objecto}
+        \State $h\gets\varepsilon$
+        \State $g_{x+}\gets p + (h,0,0)$
+        \State $g_{x-}\gets p - (h,0,0)$
+        \State $g_{y+}\gets p + (0,h,0)$
+        \State $g_{y-}\gets p - (0,h,0)$
+        \State $g_{z+}\gets p + (0,0,h)$
+        \State $g_{z-}\gets p - (0,0,h)$
 
-    \State $\nabla d_{c_x} \gets d_c(g_{x+})-d_c(g_{x-})$
-    \State $\nabla d_{c_y} \gets d_c(g_{y+})-d_c(g_{y-})$
-    \State $\nabla d_{c_z} \gets d_c(g_{z+})-d_c(g_{z-})$
-        \State \textbf{return} $\dfrac{(\nabla d_{c_x},\nabla d_{c_y},\nabla d_{c_z})}{\|(\nabla d_{c_x},\nabla d_{c_y},\nabla d_{c_z})\|}$
+        \State $\nabla d_{c_x} \gets d_c(g_{x+})-d_c(g_{x-})$
+        \State $\nabla d_{c_y} \gets d_c(g_{y+})-d_c(g_{y-})$
+        \State $\nabla d_{c_z} \gets d_c(g_{z+})-d_c(g_{z-})$
+            \State \textbf{return} $\dfrac{(\nabla d_{c_x},\nabla d_{c_y},\nabla d_{c_z})}{\|(\nabla d_{c_x},\nabla d_{c_y},\nabla d_{c_z})\|}$
+    \EndProcedure
     \end{algorithmic}
 \end{algorithm}
 
@@ -472,6 +474,7 @@ Consideramos un tetraedro cuyos vértices son $k_0=(1,-1,-1)$, $k_1=(-1,-1,1)$, 
 \begin{algorithm}[H]
     \caption{Técnica del tetraedro para el cálculo de normales} \label{alg:normal-tetraedro}
     \begin{algorithmic}
+    \Procedure{CalcularNormalTetraedro}{$p$: punto de $\R^3$, $d_c$: SDF del objecto}
     \State $h\gets\varepsilon$
     \State $p_0 \gets p + h(1,-1,-1)$
     \State $p_1 \gets p + h(-1,-1,1)$
@@ -481,6 +484,7 @@ Consideramos un tetraedro cuyos vértices son $k_0=(1,-1,-1)$, $k_1=(-1,-1,1)$, 
     \State $N\gets \sum_{i=0}^3 k_i d_c(p_i)$
 
     \State \textbf{return} $\dfrac{N}{\|N\|}$
+    \EndProcedure
     \end{algorithmic}
 \end{algorithm}
 
@@ -491,8 +495,8 @@ Tenemos por tanto ya la forma de calcular tanto la distancia de un punto al conj
 De manera natural, igual que identificamos un cuaternio con un elemento de $\R^4$ utilizaremos el tipo \verb|vec4| para representar a los mismos en GLSL. Recordemos que en este caso es la última componente la parte real del cuaternio.
 
 \begin{lstlisting}
-vec4 q; // Representa un cuaternio (x,y,z,w)
-// q = xi + yj + zk + w
+vec4 q; // Representa un cuaternio (a,b,c,d)
+// q = ai + bj + cz + d
 \end{lstlisting}
 
 Si ahora seguimos la ecuación (\ref{eq:cuadrado-cuaternio}) podemos rápidamente implementar una función que dado un cuaternio calcule su cuadrado.
@@ -710,7 +714,7 @@ Hay que reconocer que el resultado es un poco decepcionante, parecería un cuerp
 
 Gracias a los cuaternios hemos podido generalizar la definición de los números complejos a 4D y visualizar en 3D proyecciones de los conjuntos de Julia y el conjunto de Mandelbrot. Sin embargo, la apariencia del conjunto de Mandelbrot nos ha dejado un mal sabor de boca, y es que dista bastante de la belleza que nos ofrecía $\mathcal{M}$ en dos dimensiones. En realidad, a día de hoy no se ha conseguido ninguna generalización matemáticamente correcta que posea la complejidad y la belleza del conjunto de Mandelbrot en 2D, aunque ha habido varios intentos. El conjunto de Mandelbub es uno de estos intentos. Es una generalización tridimensional del conjunto de Mandelbrot alejada del álbegra que ofrecen cuaternios, hipercomplejos y otros tipos de álgebras, a veces inconsistentes. 
 
-Pensemos en $P_c(z)=z^2+c$, esta vez con $z,c\in\C$ como la operación que, dado un complejo $z$ multiplica su módulo por sí mismo, duplica su argumento y suma una cierta constante $c$. Si recurrimos en 3D a las coordenadas esféricas, las cuales identifican un punto $p\in\R^3$ mediante su módulo $r$, el ángulo que forma con el eje $X$ ($\phi$) y el ángulo que forma con el plano $y=0$ ($\theta$), podemos extender esta operación. El procedimiento sería pasar el punto $(x,y,z)$ de coordenadas cartesianas a esféricas $(r,\phi,\theta)$, elevar al cuadrado $r$, duplicar $\phi$ y $\theta$ y devolver a coordenadas cartesianas. Es decir, tendríamos la composición 
+Pensemos en $P_c(z)=z^2+c$, esta vez con $z,c\in\C$ como la operación que, dado un complejo $z$ multiplica su módulo por sí mismo, duplica su argumento y suma una cierta constante $c$. Si recurrimos en 3D a las coordenadas esféricas, las cuales identifican un punto $p\in\R^3$ mediante su módulo $r$, el ángulo que forma con el plano $y=0$ ($\phi$) y el ángulo que forma con el eje X ($\theta$), podemos extender esta operación. El procedimiento sería pasar el punto $p=(x,y,z)$ de coordenadas cartesianas a esféricas $(r,\phi,\theta)$, elevar al cuadrado $r$, duplicar $\phi$ y $\theta$ y devolver a coordenadas cartesianas. Es decir, tendríamos la composición 
 
 $$
 (x,y,z)\longmapsto(r,\phi,\theta)\longmapsto(r^2,2\phi,2\theta)\longmapsto(x',y',z')
@@ -718,21 +722,23 @@ $$
 
 Realmente, el álgebra, las operaciones, las `derivadas' utilizadas en este procedimiento y en el cálculo de la distancia al objeto no tiene ningún rigor ni fundamento matemático, pero el resultado que produce es mucho más satisfactorio.
 
-De igual manera que utilizamos el $2$ como exponente, podemos usar cualquier otro. En este contexto lo más usual es usar el 8, ya que para exponentes más altos se tiende a la simetría y a detalles menos marcados. De manera que la transformación que usaremos entonces es 
+De igual manera que utilizamos el $2$ como exponente, podemos usar cualquier otro. En este contexto lo más usual es usar el 8, ya que para exponentes más altos se tiende a la simetría y a detalles menos marcados. De manera que la transformación que usaremos entonces es la función $f$ que actúa sobre $p=(x,y,z)$ de la siguiente forma
 
 \begin{equation}
     \label{eq:f-Mandelbub}
-    f=(x,y,z)\longmapsto(r,\phi,\theta)\longmapsto(r^8,8\phi,8\theta)\longmapsto(x',y',z')\longmapsto c + (x',y',z')
+    f(p)=f(x,y,z) = \Phi(|p|^8,8\phi, 8\theta),
 \end{equation}
-
+donde $\Phi$ es la función que pasa de coordenadas esféricas a cartesianas, es decir
+$$
+\Phi(r,\phi,\theta) = (r\sin(\phi)\sin(\theta),r\cos(\phi),r\sin(\phi)\cos(\theta))
+$$
+y donde $\phi = \arccos(\frac{y}{|p|})$ y $\theta=\arctan(\frac{x}{z})$.
 
 El procedimiento, en lo que se refiere a iterar un punto para posteriormente estimar la distancia al objeto es bien parecido al ya conocido, solo que en este caso en lugar de utilizar la potencia y suma de cuaternios utilizamos la transformación (\ref{eq:f-Mandelbub}). Y claro está a la hora de calcular lo que entonces conocíamos como $q'$ la iteración cambia al haber cambiado el exponente. En este caso sería $|w'_{i+1}|=8|w|^7|w'|+1$, de forma que, dado un punto $w\in\R^3$, debemos calcular las iteraciones 
-\begin{equation}
-    \begin{split}
-        w_{i+1} &= f(w_i), w_0=w \\
-        |w'_{i+1}| &= 8|w|^7|w'|+1, w'_0=1
-    \end{split}
-\end{equation}
+\begin{align*}
+    w_{i+1} &= f(w_i), & w_0&=w \\
+    |w'_{i+1}| &= 8|w_i|^7|w'_i|+1, & w'_0&=1
+\end{align*}
 Tomando para $f$ como $c$ el valor de $w$ inicial.
 
 Una vez $w$ y $|w'|$ han sido suficientemente iteradas, tenemos el punto $w_n$ y el módulo $|w'_n|$, dispuestos a aplicarle la SDF que de nuevo es la transformación \ref{eq:SDF-Julia}. Consúltese \cite{mandelbub} para más información sobre la SDF.
